# mash

./: Cargo.toml  LICENSE  README.md  TODO
src/: cliparser.rs  main.rs
src/server/: base_server.rs  client_handler.rs  mod.rs
src/server/request/: mod.rs  req_funcs.rs
src/server/response/: mod.rs  resp.rs
src/utils/: err_and_expl.rs  html_builder.rs  mod.rs  path_utils.rs  stream_utils.rs
