[package]
name = "mash"
version = "0.9.1"
edition = "2021"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
paris = { version = "1.5", features = ["timestamps", "macros"] }
urlencoding = "2.1.0"
mime_guess = "2.0.4"
pathdiff = "0.2.1"
