[package]
name = "mash-http"
version = "0.9.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A Minimal Asynchronous Static HTTP web server written in rust"
readme = "README.md"
repository = "https://github.com/rseragon/mash"
keywords = ["http", "static-webserver", "ftp"]

[[bin]]
name = "mash"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
paris = { version = "1.5", features = ["timestamps", "macros"] }
urlencoding = "2.1.0"
mime_guess = "2.0.4"
pathdiff = "0.2.1"
